# SwitchHosts

./: .babelrc  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  LICENSE  License.md  README.md  README.pl.md  README.zh_hans.md  README.zh_hant.md  README_cloud.md  README_cn.md  eslint.config.mjs  gulpfile.js  index.html  package-lock.json  package.json  params.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  typings.d.ts  vite.main.config.mts  vite.render.config.mts  vite.render.config.ts  vite.vscode.config.mts  vitest.config.mts  webpack.config.js
.github/: issue_template.md
.github/workflows/: ci.yml  release.yml
alfred/: Readme.txt  alfred.py  info.plist
alfred/workflow/: __init__.py  background.py  notify.py  update.py  util.py  web.py  workflow.py  workflow3.py
app/: bundle.js  config.js  configs.js  gulpfile.js  index.html  main.js  package-lock.json  package.json  version.js  webpack.config.js
app-ui/: Agent.js  App.jsx  App.less  cfg.less  index.jsx
app-ui/Panel/: Buttons.jsx  Buttons.less  List.jsx  List.less  ListItem.jsx  ListItem.less  Menu.jsx  Menu.less  index.jsx  index.less  searchbar.jsx  searchbar.less
app-ui/about/: About.jsx  About.less
app-ui/configs/: contants.js
app-ui/content/: Content.jsx  Content.less  Editor.jsx  Editor.less  SearchBar.jsx  SearchBar.less  cm_hl.js  content.jsx  editor.less  kw.js
app-ui/events/: alert.js  check_hosts_refresh.js  del_hosts.js  drag_done.js  esc.js  get_on_hosts.js  index.js  list_updated.js  reload.js  save.js  sort.js  sudo_cancel.js  sudo_pswd.js  toggle_hosts.js  top_toggle.js  update_hosts.js
app-ui/frame/: EditPrompt.jsx  EditPrompt.less  Group.jsx  Group.less  MyFrame.jsx  MyFrame.less  PreferencesPrompt.jsx  PreferencesPrompt.less  StatConfirm.jsx  SudoPrompt.jsx  preferences.jsx  preferences.less  sudo.jsx
app-ui/libs/: search.js
app-ui/misc/: notificationStyle.js
app-ui/panel/: Buttons.jsx  Buttons.less  List.jsx  ListItem.jsx  ListItem.less  Panel.jsx  (+4 more)
assets/: Credits.rtf  app.icns
css/: main.css  main.styl
e2e/: data-transfer.spec.ts  folder-choice-mode.spec.ts  hosts-entry-management.spec.ts  local-hosts.spec.ts  preferences.spec.ts  remote-hosts.spec.ts  switchhosts.spec.ts  system-hosts.spec.ts  titlebar.spec.ts  trashcan.spec.ts
javascripts/: c.js  jquery.js
scripts/: build-vscode-webview.mjs  build-wasm.mjs  bundle-universal-helper.mjs  entitlements.mac.plist  less.sh  ln.sh  make.js  make.mjs  notarize.js  release-config.mjs  sort-lang.mjs  sync-tauri-version.mjs  upload-diagnostics.mjs  upload-progress.mjs  upload-release.mjs  vars.js  vars.mjs  version-up.mjs  version_up.js  webpack.base.config.js  webpack.config.js  webpack.dll.js  webpack.main.config.js  webpack.main.prod.config.js
src/: SwitchHosts.py  index.html  main.py  package.json  setup.py  version.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: find.json  main.json  tray.json
src-tauri/crates/switchhosts-core/: Cargo.toml
src-tauri/crates/switchhosts-core/src/: aggregate.rs  lib.rs  normalize.rs  tree_format.rs
src-tauri/crates/switchhosts-wasm/: Cargo.toml
src-tauri/crates/switchhosts-wasm/src/: lib.rs
src-tauri/helper/: net.oldj.switchhosts.helper.plist
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  commands.rs  find.rs  http.rs  http_api.rs  i18n.rs  import_export.rs  lib.rs  lifecycle.rs  main.rs  refresh.rs  tray.rs  window_theme.rs
src-tauri/src/helper_proto/: daemon.rs  mod.rs  xpc.rs
src-tauri/src/hosts_apply/: aggregate.rs  cmd_runner.rs  elevation.rs  error.rs  helper_admin.rs  helper_client.rs  history.rs  mod.rs  write.rs
src-tauri/src/migration/: archiver.rs  mod.rs  potdb.rs
src-tauri/src/storage/: atomic.rs  config.rs  data_dir_pointer.rs  entries.rs  error.rs  fs_copy.rs  manifest.rs  mod.rs  paths.rs  state.rs  trashcan.rs
src-tauri/tests/: window_config.rs
src2/: bundle.js  index.html  main.js  version.js
src_v0_1/: SwitchHosts.py
stylesheets/: c.css  styles.css
test/: _base.ts  getUrl.js  index.js  setup.ts
ui/: .babelrc  Agent.js  App.jsx  App.less  README.md  app.js  app.jsx  app.less  cfg.less  index.html  index.js  index.jsx  main.fbp  package.json
v2/: index.html
v3/: .babelrc  .gitignore  README.md  package-lock.json  package.json
v4.0/: .gitignore  README.md  electron.d.ts  package.json  tsconfig.json  typings.d.ts
vscode-extension/: .gitignore  .vscodeignore  README.md  package.json  switchhosts-vscode-5.0.0.vsix  tsconfig.json
(+1035 files in other folders)
