[package]
name = "switchhosts-wasm"
version = "5.0.0"
edition = "2021"
description = "WASM bindings for SwitchHosts core logic (VS Code extension)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
switchhosts-core = { path = "../switchhosts-core" }
serde_json = "1"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
